--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛒</text></svg>"
     />
 
-    <title>Fake eCommerce</title>
+    <title>eCommerce</title>
   </head>
   <body>
     <div id="root" class="flex flex-col min-h-screen"></div>
